--- a/FormsToolkit.nuspec
+++ b/FormsToolkit.nuspec
@@ -1,44 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
-       <id>YourName.FormsPlugin.Toolkit</id>
+       <id>FormsToolkit</id>
        <version>1.0.0</version>
-       <title>Toolkit Control Plugin for Xamarin.Forms</title>
-       <authors>Your Name</authors>
-       <owners>Your Name</owners>
-       <licenseUrl></licenseUrl>
-       <projectUrl></projectUrl>
-     <!--Default Icon, a template can be found:  https://raw.githubusercontent.com/jamesmontemagno/Xamarin-Templates/master/Plugins-Templates/icons/plugin_icon.png-->
-     <iconUrl>https://raw.githubusercontent.com/jamesmontemagno/Xamarin-Templates/master/Plugins-Templates/icons/plugin_icon_nuget.png</iconUrl>
-     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+       <title>Toolkit for Xamarin.Forms</title>
+       <authors>James Montemagno</authors>
+       <owners>James Montemagno</owners>
+       <licenseUrl>https://github.com/jamesmontemagno/xamarin.forms-toolkit/blob/master/LICENSE.md</licenseUrl>
+       <projectUrl>https://github.com/jamesmontemagno/xamarin.forms-toolkit</projectUrl>
+       <requireLicenseAcceptance>false</requireLicenseAcceptance>
        <description>
-         Long description for your plugin.
+         Toolkit for Xamarin.Forms (Controls, Behaviors, and Converters)!
        </description>
-       <summary>Short description for your plugin.</summary>
-       <tags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin.forms, windows phone, winphone, wp8, android, xamarin.forms, ios</tags>
+       <summary>Toolkit for Xamarin.Forms (Controls, Behaviors, and Converters)!</summary>
+       <tags>xamarin.forms, toolkit, converters, behaviors, controls, xamarin, pcl, xam.pcl, plugin, plugin for xamarin.forms, windows phone, winphone, wp8, android, xamarin.forms, ios</tags>
        <dependencies>
-         <dependency id="Xamarin.Forms" version="1.3.1.6296" />
+         <dependency id="Xamarin.Forms" version="2.0.0.6490" />
        </dependencies>
    </metadata>
    <files>
-<!--Core-->
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.dll" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Toolkit.FormsPlugin.Abstractions.dll" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.xml" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Toolkit.FormsPlugin.Abstractions.xml" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.pdb" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Toolkit.FormsPlugin.Abstractions.pdb" />
-
+     <!--Core-->
+     <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.dll" target="lib/portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/FormsToolkit.dll" />
+     <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.xml" target="lib/portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/FormsToolkit.xml" />
+    
      <!--Xamarin.Android-->
-     <file src="Toolkit\Toolkit.FormsPlugin.Android\bin\Release\Toolkit.FormsPlugin.Android.dll" target="lib\MonoAndroid10\Toolkit.FormsPlugin.Android.dll" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Android\bin\Release\Toolkit.FormsPlugin.Android.xml" target="lib\MonoAndroid10\Toolkit.FormsPlugin.Android.xml" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Android\bin\Release\Toolkit.FormsPlugin.Android.pdb" target="lib\MonoAndroid10\Toolkit.FormsPlugin.Android.pdb" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.dll" target="lib\MonoAndroid10\Toolkit.FormsPlugin.Abstractions.dll" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.xml" target="lib\MonoAndroid10\Toolkit.FormsPlugin.Abstractions.xml" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.pdb" target="lib\MonoAndroid10\Toolkit.FormsPlugin.Abstractions.pdb" />
+     <file src="FormsToolkit/FormsToolkit.Android/bin/Release/FormsToolkit.Android.dll" target="lib/MonoAndroid10/FormsToolkit.Android.dll" />
+     <file src="FormsToolkit/FormsToolkit.Android/bin/Release/FormsToolkit.Android.xml" target="lib/MonoAndroid10/FormsToolkit.Android.xml" />
+     <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.dll" target="lib/MonoAndroid10/FormsToolkit.dll" />
+     <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.xml" target="lib/MonoAndroid10/FormsToolkit.xml" />
 
      <!--Xamarin.iOSUnified-->
-     <file src="Toolkit\Toolkit.FormsPlugin.iOSUnified\bin\iPhone\Release\Toolkit.FormsPlugin.iOSUnified.dll" target="lib\Xamarin.iOS10\Toolkit.FormsPlugin.iOSUnified.dll" />
-     <file src="Toolkit\Toolkit.FormsPlugin.iOSUnified\bin\iPhone\Release\Toolkit.FormsPlugin.iOSUnified.xml" target="lib\Xamarin.iOS10\Toolkit.FormsPlugin.iOSUnified.xml" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.dll" target="lib\Xamarin.iOS10\Toolkit.FormsPlugin.Abstractions.dll" />
-     <file src="Toolkit\Toolkit.FormsPlugin.Abstractions\bin\Release\Toolkit.FormsPlugin.Abstractions.xml" target="lib\Xamarin.iOS10\Toolkit.FormsPlugin.Abstractions.xml" />
+     <file src="FormsToolkit/FormsToolkit.iOS/bin/iPhone/Release/FormsToolkit.iOS.dll" target="lib/Xamarin.iOS10/FormsToolkit.iOS.dll" />
+     <file src="FormsToolkit/FormsToolkit.iOS/bin/iPhone/Release/FormsToolkit.iOS.xml" target="lib/Xamarin.iOS10/FormsToolkit.iOS.xml" />
+     <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.dll" target="lib/Xamarin.iOS10/FormsToolkit.dll" />
+     <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.xml" target="lib/Xamarin.iOS10/FormsToolkit.xml" />
 
    </files>
 </package>
