--- a/FormsToolkit/FormsToolkit.iOS/FormsToolkit.iOS.csproj
+++ b/FormsToolkit/FormsToolkit.iOS/FormsToolkit.iOS.csproj
@@ -46,12 +46,6 @@
     <Compile Include="Pages\NavigationPageNoLineRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FormsToolkit\FormsToolkit.csproj">
-      <Project>{14C534B6-1984-41A9-A384-D3A5508588E3}</Project>
-      <Name>FormsToolkit</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -78,6 +72,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <Import Project="..\FormsToolkit.Shared\FormsToolkit.Shared.projitems" Label="Shared" Condition="Exists('..\FormsToolkit.Shared\FormsToolkit.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.0.6490\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.0.6490\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -90,5 +85,11 @@
     <Folder Include="Cells\" />
     <Folder Include="Controls\" />
     <Folder Include="Pages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FormsToolkit\FormsToolkit.csproj">
+      <Project>{14C534B6-1984-41A9-A384-D3A5508588E3}</Project>
+      <Name>FormsToolkit</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
