--- a/FormsToolkit/FormsToolkit/FormsToolkit.csproj
+++ b/FormsToolkit/FormsToolkit/FormsToolkit.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\FormsToolkit.Shared\FormsToolkit.Shared.projitems" Label="Shared" Condition="Exists('..\FormsToolkit.Shared\FormsToolkit.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
@@ -46,6 +47,8 @@
     <Compile Include="Behaviors\EmptyValidatorBehavior.cs" />
     <Compile Include="Controls\EntryLine.cs" />
     <Compile Include="Pages\NavigationPageNoLine.cs" />
+    <Compile Include="Services\MessagingService.cs" />
+    <Compile Include="Interfaces\IMessagingService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null">
@@ -87,5 +90,7 @@
     <Folder Include="Behaviors\" />
     <Folder Include="Converters\" />
     <Folder Include="Pages\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
