--- a/FormsToolkit.nuspec
+++ b/FormsToolkit.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
        <id>FormsToolkit</id>
-       <version>1.0.1</version>
+       <version>1.1.0</version>
        <title>Toolkit for Xamarin.Forms</title>
        <authors>James Montemagno</authors>
        <owners>James Montemagno</owners>
@@ -17,8 +17,13 @@
        <dependencies>
          <dependency id="Xamarin.Forms" version="2.0.0.6490" />
        </dependencies>
+       <releaseNotes>
+       [1.1.0]
+       -Added Messaging Service (abstraction over Messaging Center)
+       </releaseNotes>
    </metadata>
    <files>
+     <file src="readme.txt" target="readme.txt" />
      <!--Core-->
      <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.dll" target="lib/portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/FormsToolkit.dll" />
      <file src="FormsToolkit/FormsToolkit/bin/Release/FormsToolkit.xml" target="lib/portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10/FormsToolkit.xml" />
