--- a/FormsToolkit.nuspec
+++ b/FormsToolkit.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
        <id>FormsToolkit</id>
-       <version>1.1.0</version>
+       <version>$version$</version>
        <title>Toolkit for Xamarin.Forms</title>
        <authors>James Montemagno</authors>
        <owners>James Montemagno</owners>
