--- a/FormsToolkit/FormsToolkit/FormsToolkit.csproj
+++ b/FormsToolkit/FormsToolkit/FormsToolkit.csproj
@@ -7,6 +7,10 @@
     <Version>1.0.0.0</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard1.0\FormsToolkit.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
